@startuml
title Architecture Type 1: High-Level System & Deployment Architecture

node "Client Browser" {
    component "Web Dashboard (Next.js)" as Dashboard
}

node "Discord Client" {
    component "Discord UI" as DiscordClient
}

node "Render Cloud" {
    component "Discord Bot (Node.js)" as DiscordBot
}

node "Vercel Serverless" {
    component "Backend API" as Backend
}

node "Supabase BaaS" {
    database "PostgreSQL Database" as DB
}

node "NVIDIA / Google Cloud" {
    component "LLM Service (Nemotron / Gemini)" as LLM
}

node "Office Environment" {
    node "Arduino Uno Room Nodes" {
        component "Room Controller Firmware" as Arduino
    }
    node "Local Node" {
        component "Hardware Simulator (runner.ts)" as Simulator
    }
}

Dashboard --> Backend : "REST API requests"
Dashboard ..> DB : "Supabase Realtime (WebSockets)"
DiscordClient --> DiscordBot : "Slash Cmds & Mentions"
DiscordBot --> Backend : "REST API requests"
DiscordBot ..> DB : "Realtime Alerts (WebSockets)"
DiscordBot --> LLM : "Conversational Prompting"
Arduino --> Backend : "POST /api/hardware/report\n(via Serial/ESP8266)"
Simulator --> Backend : "POST /api/hardware/report\n& /api/consumption/report"
Backend --> DB : "Queries & RPCs"

@enduml

@startuml
title Architecture Type 2: Database Schema & Entity Relationships

' hide the spot
hide circle
' avoid problems with { }
skinparam linetype ortho

entity "rooms" as rooms {
  * id : text <<PK>>
  --
  name : text
}

entity "devices" as devices {
  * id : uuid <<PK>>
  --
  * room_id : text <<FK>>
  name : text
  type : device_type (ENUM)
  status : boolean
  wattage : integer
  last_changed_at : timestamptz
}

entity "device_history" as device_history {
  * id : uuid <<PK>>
  --
  * device_id : uuid <<FK>>
  previous_status : boolean
  new_status : boolean
  changed_at : timestamptz
}

entity "alerts" as alerts {
  * id : uuid <<PK>>
  --
  * room_id : text <<FK>>
  type : alert_type (ENUM)
  message : text
  active : boolean
  triggered_at : timestamptz
  resolved_at : timestamptz
}

entity "consumption_logs" as consumption_logs {
  * id : uuid <<PK>>
  --
  logged_at : timestamptz
  sim_time : timestamptz
  room_id : text
  kwh : numeric
  cost_bdt : numeric
}

rooms ||--o{ devices : "has"
rooms ||--o{ alerts : "has"
devices ||--o{ device_history : "logs status changes"

@enduml

@startuml
title Architecture Type 3: Low-Level Software Components

package "Backend Next.js API" {
    package "API Routes" {
        [power/route.ts] as R_Power
        [alerts/route.ts] as R_Alerts
        [devices/route.ts] as R_Devices
        [devices/history/route.ts] as R_History
        [devices/toggle/route.ts] as R_Toggle
        [hardware/report/route.ts] as R_Hardware
        [consumption/route.ts] as R_Cons
        [consumption/logs/route.ts] as R_ConsLogs
        [consumption/report/route.ts] as R_ConsRep
        [consumption/breakdown/route.ts] as R_ConsBreak
    }

    package "Services Layer" {
        [DeviceService] as S_Device
        [AlertService] as S_Alert
        [PowerService] as S_Power
        [ConsumptionService] as S_Cons
        [RoomService] as S_Room
    }
    
    API_Routes --> ServicesLayer
}

package "Discord Bot" {
    [bot.ts] as Bot_Main
    [LLM Client] as Bot_LLM
    [Keep-Alive Server] as Bot_Http
    
    Bot_Main --> Bot_LLM
    Bot_Main --> Bot_Http
}

package "Web Dashboard" {
    [page.tsx] as Web_Page
    [layout.tsx] as Web_Layout
    [lib/types.ts] as Web_Types
    
    Web_Page --> Web_Types
}

database "PostgreSQL" as DB

BackendNextjsAPI --> DB : "Supabase JS SDK"
DiscordBot --> BackendNextjsAPI : "HTTP Fetch"
DiscordBot ..> DB : "Realtime WebSockets"
WebDashboard --> BackendNextjsAPI : "HTTP Fetch"
WebDashboard ..> DB : "Realtime WebSockets"

@enduml

@startuml
title Software Interaction Sequence: Device Telemetry & Alert Loop

actor "Arduino / Simulator" as HW
participant "Backend API\n(/api/hardware/report)" as API
participant "DeviceService" as DS
participant "AlertService" as AS
database "Supabase PostgreSQL" as DB
participant "Discord Bot" as Bot
actor "Discord Channel" as Disc

HW -> API : POST { roomId, devices, simulatedTime }
activate API

API -> DS : updateDeviceStatusSimulated()
activate DS
DS -> DB : Check current status
DB --> DS : Current status
alt Status changed
    DS -> DB : UPDATE devices status/last_changed_at\nINSERT INTO device_history
end
deactivate DS

API -> AS : evaluateAlerts(simulatedTime)
activate AS
loop For each Room
    AS -> DS : getDevicesByRoom(roomId)
    DS --> AS : list of devices
    
    alt Is After Hours & device is ON
        AS -> AS : triggerAlert('after_hours')
        AS -> DB : INSERT INTO alerts
        DB -->> Bot : Realtime INSERT Notification
        activate Bot
        Bot -> Bot : conversationalize()
        Bot -> Disc : Send Alert Message
        deactivate Bot
    else Working Hours or all devices OFF
        AS -> AS : resolveAlert('after_hours')
        AS -> DB : UPDATE alerts active=false
    end
    
    alt All devices ON continuously for > 2 hours
        AS -> AS : triggerAlert('continuous_usage')
        AS -> DB : INSERT INTO alerts
        DB -->> Bot : Realtime INSERT Notification
        activate Bot
        Bot -> Bot : conversationalize()
        Bot -> Disc : Send Alert Message
        deactivate Bot
    else At least one device is OFF
        AS -> AS : resolveAlert('continuous_usage')
        AS -> DB : UPDATE alerts active=false
    end
end
deactivate AS

API --> HW : 200 OK { success: true }
deactivate API

@enduml

@startuml
title Software Interaction Sequence: Discord Bot Conversational LLM Flow

actor "User (Boss)" as User
participant "Discord Bot" as Bot
participant "Backend API" as API
participant "NVIDIA NIM / Gemini" as LLM

User -> Bot : Mentions @ChronoBot with question
activate Bot

note over Bot : Fetch current system context
Bot -> API : GET /api/devices
Bot -> API : GET /api/power
Bot -> API : GET /api/consumption
Bot -> API : GET /api/alerts
API --> Bot : Live office data, power levels,\ncosts, and active alerts

note over Bot : Formulate LLM Prompt with database facts
Bot -> LLM : POST /chat/completions (Prompt + Question)
activate LLM
LLM --> Bot : Factual, concise response text
deactivate LLM

Bot -> Bot : format response (conversationalize)
Bot --> User : Reply message in Discord chat
deactivate Bot

@enduml

@startuml
title Architecture Type 4: Hardware Circuit & Connections Layout

package "Low Voltage Control (DC 5V)" {
    component "Arduino Uno Board" as Arduino {
        port "5V" as Arduino_5V
        port "GND" as Arduino_GND
        port "Pin 2" as D2
        port "Pin 3" as D3
        port "Pin 4" as D4
        port "Pin 5" as D5
        port "Pin 6" as D6
        port "Pin A0 (Analog)" as A0
    }

    component "5-Channel Relay Board" as Relay {
        port "VCC" as R_VCC
        port "GND" as R_GND
        port "IN1" as R_IN1
        port "IN2" as R_IN2
        port "IN3" as R_IN3
        port "IN4" as R_IN4
        port "IN5" as R_IN5
        port "COM" as R_COM
        port "NO1" as NO1
        port "NO2" as NO2
        port "NO3" as NO3
        port "NO4" as NO4
        port "NO5" as NO5
    }

    component "ACS712 Current Sensor" as ACS712 {
        port "VCC" as S_VCC
        port "GND" as S_GND
        port "OUT" as S_OUT
        port "IP+" as IP_Plus
        port "IP-" as IP_Minus
    }
}

package "High Voltage AC (220V)" {
    rectangle "AC Mains" {
        port "Live" as Mains_Live
        port "Neutral" as Mains_Neutral
    }
    
    component "Fan 1" as Fan1
    component "Fan 2" as Fan2
    component "Light 1" as Light1
    component "Light 2" as Light2
    component "Light 3" as Light3
}

' Control lines
D2 --> R_IN1
D3 --> R_IN2
D4 --> R_IN3
D5 --> R_IN4
D6 --> R_IN5

' Power lines DC
Arduino_5V --> R_VCC
Arduino_5V --> S_VCC
Arduino_GND --> R_GND
Arduino_GND --> S_GND

' Analog Sensing direct (No Voltage Divider needed as Uno is 5V ADC tolerant)
S_OUT --> A0

' High voltage wiring
Mains_Live --> IP_Plus
IP_Minus --> R_COM

NO1 --> Fan1
NO2 --> Fan2
NO3 --> Light1
NO4 --> Light2
NO5 --> Light3

Fan1 --> Mains_Neutral
Fan2 --> Mains_Neutral
Light1 --> Mains_Neutral
Light2 --> Mains_Neutral
Light3 --> Mains_Neutral

@enduml
